@@ -39,6 +39,7 @@ typedef enum _GstTTMLAttributeType {
   GST_TTML_ATTR_TICK_RATE,
   GST_TTML_ATTR_FRAME_RATE,
   GST_TTML_ATTR_FRAME_RATE_MULTIPLIER,
+  GST_TTML_ATTR_SUB_FRAME_RATE,
   GST_TTML_ATTR_CELLRESOLUTION,
   GST_TTML_ATTR_WHITESPACE_PRESERVE,
   GST_TTML_ATTR_SEQUENTIAL_TIME_CONTAINER,
